--- a/curriculum/css/stylesheet.css
+++ b/curriculum/css/stylesheet.css
@@ -5,7 +5,8 @@
  */
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  overflow-x: hidden; }
+  overflow-x: hidden; 
+  }
 
 p {
   font-size: 20px; }
@@ -155,7 +156,7 @@ section.success {
       background: #E14568; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
         color: white;
-        background: #18BC9C; }
+        background: #E14568; }
   #mainNav.navbar-shrink {
     padding-top: 5px;
     padding-bottom: 5px; }
@@ -194,23 +195,29 @@ header.masthead {
       font-size: 1.75em; } }
 
 #portfolio .portfolio-item {
-  right: 0;
-  margin: 0 0 15px; }
+	  right: 0;
+	  margin: 0 0 15px; 
+}
+
   #portfolio .portfolio-item .portfolio-link {
     position: relative;
     display: block;
     max-width: 400px;
     margin: 0 auto;
-    cursor: pointer; }
+    cursor: pointer; 
+	border: 1px solid black;
+}
     #portfolio .portfolio-item .portfolio-link .caption {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      -webkit-transition: all ease 0.5s;
-      -moz-transition: all ease 0.5s;
-      transition: all ease 0.5s;
-      opacity: 0;
-      background: rgb(225, 69, 104, 0.9); }
+		  position: absolute;
+		  width: 100%;
+		  height: 100%;
+		  -webkit-transition: all ease 0.5s;
+		  -moz-transition: all ease 0.5s;
+		  transition: all ease 0.5s;
+		  opacity: 0;
+		  background: rgb(225, 69, 104, 0.9); 
+
+	  }
       #portfolio .portfolio-item .portfolio-link .caption:hover {
         opacity: 1; }
       #portfolio .portfolio-item .portfolio-link .caption .caption-content {
@@ -231,12 +238,17 @@ header.masthead {
 #portfolio * {
   z-index: 2; }
 
+body.modal-open {
+    padding-right: 0px !important;
+}
 @media (min-width: 767px) {
   #portfolio .portfolio-item {
     margin: 0 0 30px; 
 	}
 }
-	
+.modal-body img{
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);;
+}
 .portfolio-modal .modal-dialog {
   margin: auto;
   padding: 0;
@@ -456,3 +468,10 @@ footer {
 .btn:active,
 .btn:focus {
   outline: none; }
+
+/*Corrige bug padding: 17px*/
+.test[style] {
+     padding-right:0 !important;
+	 overflow: auto !important;
+	 display: flex !important;
+ }
