--- a/curriculum/css/stylesheet.css
+++ b/curriculum/css/stylesheet.css
@@ -246,9 +246,12 @@ body.modal-open {
     margin: 0 0 30px; 
 	}
 }
+/*Sombra para las images de .modal-dialog*/
 .modal-body img{
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);;
 }
+/*Achicar tamaño del titulo de .caption en pantallas chicas*/
+
 .portfolio-modal .modal-dialog {
   margin: auto;
   padding: 0;
@@ -265,10 +268,16 @@ body.modal-open {
     .portfolio-modal .modal-dialog .modal-content h2 {
       font-size: 3em;
       margin: 0; }
+	@media screen and (max-width: 767px))  {
+		.portfolio-modal .modal-dialog .modal-content h2{
+			font-size: 5px;
+	}}
     .portfolio-modal .modal-dialog .modal-content img {
       margin-bottom: 30px; }
     .portfolio-modal .modal-dialog .modal-content .item-details {
       margin: 30px 0; }
+	  
+
 
 .portfolio-modal .close-modal {
   position: absolute;
@@ -469,9 +478,3 @@ footer {
 .btn:focus {
   outline: none; }
 
-/*Corrige bug padding: 17px*/
-.test[style] {
-     padding-right:0 !important;
-	 overflow: auto !important;
-	 display: flex !important;
- }
