--- a/silvanaclotta-responsive/css/style.css
+++ b/silvanaclotta-responsive/css/style.css
@@ -1,7 +1,32 @@
+*{
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+html, body{
+	height: 100%;
+}
+
+body{
+	display: flex;
+	flex-direction: column;
+}
+
+.wrap{
+	flex: 1 0 auto;
+}
+.esconder{
+	display: none;
+}
 .navbar{
 	background: rgba(0, 0, 0, 0.4);
 	border: none;
-	padding: 0.5em 0.5em;
+	padding: 0.5em 0;
+	margin: 0;
+}
+
+.navbar-right{
 	margin: 0;
 }
 
@@ -11,13 +36,13 @@
 
 #hero{
 	margin-top: -5em; 
-	height: 40%;
+	height: 60%;
 	min-height: 210px;
-	width: 100%;
 	background: url("../src/hero.jpg");
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: 50%;
+	border-bottom: 2px solid #111;
 }
 
 #foto-perfil{
@@ -31,7 +56,78 @@
 
 #texto-perfil{
 	margin: 1.5em 0;
-	padding: 0 1em;
+}
+
+#footer{
+	align-items: center;
+	flex-shrink: 0;
+	width: 100%;
+	background-color: #111;
+	color: #aaa;
+}
+
+#footer row{
+	display: flex;
+	align-items: center;
+}
+
+#footer div{
+	padding: 0.5em 1em;
+}
+
+.cuadros-container{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: 1em auto;
+}
+.cuadros-columna{
+	flex: 25%;
+	max-width: 25%;
+	padding: 0 1.3em;
+}
+.cuadro{
+	margin-bottom: 1em;
+	box-shadow: 4px 4px 8px #aaa;
+	vertical-align: middle;
+}
+
+@media screen and (max-width: 992px){
+	.cuadros-container{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		margin: 1em auto;
+	}
+	.cuadros-columna{
+		flex: 25%;
+		max-width: 25%;
+		padding: 0 1.5em;
+	}
+	.cuadro{
+		margin-bottom: 1em;
+		box-shadow: 4px 4px 8px #aaa;
+		vertical-align: middle;
+	}
+}
+
+@media screen and (max-width: 1200px){
+	.cuadros-container{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		margin: 1em auto;
+	}
+	.cuadros-columna{
+		flex: 25%;
+		max-width: 25%;
+		padding: 0 1.5em;
+	}
+	.cuadro{
+		margin-bottom: 1em;
+		box-shadow: 4px 4px 8px #aaa;
+		vertical-align: middle;
+	}
 }
 
 @media screen and (max-width: 768px){
@@ -56,5 +152,49 @@
 	
 	.navbar-collapse{
 		max-height: none !important;
+	}
+	
+	.cuadros-container{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		margin: 1em auto;
+	}
+	.cuadros-columna{
+		flex: 50%;
+		max-width: 50%;
+		padding: 0 1.5em;
+	}
+	.cuadro{
+		margin-bottom: 1em;
+		box-shadow: 4px 4px 8px #aaa;
+		vertical-align: middle;
+	}
+}
+
+@media screen and (max-width: 576px){
+	.cuadros-container{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: 1em auto;
+	}
+	.cuadros-columna{
+		flex: 50%;
+		max-width: 50%;
+		padding: 0 1.4em;
+	}
+	.cuadro{
+		margin-bottom: 1em;
+		box-shadow: 4px 4px 8px #aaa;
+		vertical-align: middle;
+	}
+	#footer div{
+		padding: 0 0.6em;
+	}
+	
+	#footer row{
+		display: flex;
+		align-items: center;
 	}
 }
