--- a/ricardo-vive/styles.css
+++ b/ricardo-vive/styles.css
@@ -8,18 +8,16 @@ html{
 }
 
 body{
+  display: flex;
+  justify-content: center;
   width: 100%;
   height: 100%;
+  background-image: url("res/ricardo-bg-2.jpg");
+  background-size: cover;
 }
 main{
-  margin: auto;
   width: 70%;
   height: 100%;
-  background-image: url("src/ricardo-bg.jpg");
-  background-size: 100% auto;
-  background-position: 100% 25%;
-  background-color: #64a5dd;
-  background-repeat: no-repeat;
 }
 
 .button-container{
@@ -35,14 +33,14 @@ main{
   width: 100px;
   height: 95px;
   border-radius: 100%;
-  background-image: url("https://www.myinstants.com/media/images/transparent_button_normal.png");
+  background-image: url("res/transparent_button_normal.png");
   background-color: red;
   background-size: cover;
   background-position: 50% 50%;
 }
 
 .button:active{
-  background-image: url("https://www.myinstants.com/media/images/transparent_button_pressed.png");
+  background-image: url("res/transparent_button_pressed.png");
 }
 
 .button-caption{
