--- a/BarreBot/styles.css
+++ b/BarreBot/styles.css
@@ -56,3 +56,9 @@ section{
 img{
     width:100%;
 }
+
+#container-tweets div{
+    font-size: 20px;
+    font-family: Arial;
+    margin: 10px 0;
+}
